# minicc

./: .gitignore  Makefile  lex_syntax.txt  minicc.cabal
parser_tests/: README  do_semcheck
parser_tests/fuzzying/: c02.c  c03.c  c04.c  c05.c  c06.c  c07.c  c08.c  c09.c  c11.c  c14.c  c16.c  c17.c  c18.c  c19.c  c24.c  c26.c  run_test  w00.c  w01.c  w02.c  w03.c  w04.c  w05.c  w06.c  w07.c  w08.c  w09.c  w10.c  w11.c  w12.c  w13.c  w14.c  w16.c  w17.c  w18.c  w19.c  w21.c  w23.c  w24.c  w25.c  (+4 more)
parser_tests/regular/: f00.c  f00.c.me  f01.c  f01.c.me  f02.c  f02.c.me  f03.c  f03.c.me  f04.c  f04.c.me  f05.c  f05.c.ans  f06.c  f06.c.ans  f07.c  f07.c.ans  f08.c  f08.c.me  f09.c  f09.c.me  f10.c  f10.c.ans  f11.c  f11.c.me  f12.c  f12.c.me  f13.c  f13.c.ans  f14.c  f14.c.me  f15.c  f15.c.me  f16.c  f16.c.ans  f17.c  f17.c.ans  f18.c  f19.c  f19.c.me  f20.c  (+48 more)
parser_tests/semerror/: argtype.c  c00.c  c01.c  c10.c  c12.c  c13.c  c21.c  c23.c  c25.c  c27.c  c29.c  c30.c  undeffun.c
src/: IrTree.hs  Main.hs  Parser.hs  ParserMain.hs  Semantic.hs  SemanticMain.hs  SyntaxTree.hs
